[gd_scene load_steps=8 format=2]

[ext_resource path="res://cards/backgrounds/Unbelievable.png" type="Texture2D" id=1]
[ext_resource path="res://scripts/Common.gd" type="Script" id=2]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="FontFile" id=3]
[ext_resource path="res://fonts/Classic_font_24.tres" type="FontFile" id=4]
[ext_resource path="res://images/Menu_interface/points.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=2]
size = 79
outline_size = 3
outline_color = Color( 0.807843, 0.643137, 0.0823529, 1 )
font_data = ExtResource( 3 )

[node name="Background" type="Sprite2D"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
offset_left = -126.0
offset_top = -2.0
offset_right = -68.0
offset_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Name:"

[node name="NameVar" type="Label" parent="NameLabel"]
offset_left = 61.35
offset_right = 103.35
offset_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "NA
"

[node name="ScarcityLabel" type="Label" parent="."]
offset_left = -126.0
offset_top = 27.0
offset_right = -53.0
offset_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Scarcity:"

[node name="ScarcityVar" type="Label" parent="ScarcityLabel"]
offset_left = 78.46
offset_right = 120.46
offset_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "NA
"

[node name="DropRateLabel" type="Label" parent="."]
offset_left = -126.0
offset_top = 55.2
offset_right = -53.0
offset_bottom = 116.2
custom_fonts/font = SubResource( 1 )
text = "Drop Rate:"

[node name="DropRateVar" type="Label" parent="DropRateLabel"]
offset_left = 96.6
offset_right = 138.6
offset_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "NA
"

[node name="NameLabel4" type="Label" parent="."]
offset_left = -126.0
offset_top = 81.56
offset_right = -32.0
offset_bottom = 142.56
custom_fonts/font = SubResource( 1 )
text = "Serie:"

[node name="NameVar2" type="Label" parent="NameLabel4"]
offset_left = 52.32
offset_right = 94.3199
offset_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "NA
"

[node name="PointImage" type="TextureRect" parent="."]
visible = false
offset_left = -55.586
offset_top = 147.331
offset_right = 44.414
offset_bottom = 247.331
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="PointVar" type="Label" parent="PointImage"]
offset_left = -72.16
offset_top = 21.279
offset_right = -30.1601
offset_bottom = 82.279
grow_horizontal = 0
scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "NA
"

[node name="Label" type="Label" parent="."]
offset_left = 58.955
offset_top = 37.284
offset_right = 136.955
offset_bottom = 138.284
grow_horizontal = 0
custom_colors/font_color = Color( 0.803922, 0.847059, 0.0784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "99"
align = 1

[node name="Avatar" type="TextureRect" parent="."]
offset_left = -96.47
offset_top = -215.55
offset_right = 103.53
offset_bottom = -15.5502
